--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "kwapi-wrapper-js",
+  "name": "kwapi-wrapper",
   "version": "0.1.0",
   "description": "kwapi Client library",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha __tests__ --opts ./__tests__/mocha.opts --timeout 15000"
+    "test": "istanbul cover ./node_modules/.bin/_mocha -- __tests__ --opts ./__tests__/mocha.opts --timeout 15000"
   },
   "repository": {
     "type": "git",
@@ -16,16 +16,19 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@slack/client": "^3.8.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "eslint": "^3.16.1",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "moxios": "^0.3.0"
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "axios-mock-adapter": "^1.7.1",
     "blueimp-md5": "^2.7.0",
     "chai-shallow-deep-equal": "^1.4.4",
     "jsonwebtoken": "^7.3.0",
